--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="https://www.kia.com/etc.clientlibs/settings/wcm/designs/kia-uk/clientlib/resources/rbr/rbr-fav.ico"
     />
+    <link rel="stylesheet" href="src/styles/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Our Kia Range &amp; Find A Local Dealer | Kia UK</title>
   </head>
